--- a/Latex/Documentation.tex
+++ b/Latex/Documentation.tex
@@ -35,8 +35,28 @@ Année 2016-2017, Semestre 2\\[12cm]
 
 \newpage
 
-\section{Blablabla}
+\section{L'organisation générale du code}
 
-qsdqsd
+Je sais pas !
+
+\section{Les points clés de l'implémentation}
+
+Là et là !
+
+\section{Les défauts et erreurs connus}
+
+Aucune ! La sémantique est parfaite !
+
+\section{Pourquoi le design est magnifique}
+
+Parce que je l'ai réalisé !
+
+\section{Pourquoi je suis beau}
+
+Parce que !
+
+\section{Pourquoi pas ?}
+
+Et oui !
 
 \end{document}
