start of the second part : promotion

--- a/Latex/Documentation.tex
+++ b/Latex/Documentation.tex
@@ -160,5 +160,7 @@ L'implémentation telle qu'elle est actuellement connaît certaines lourdeurs da
 
 De même pour chaque nouvelle fenêtre, chaque nouveau mouvement un grand nombre de classes sont instanciées, principalement dans la partie graphique, ce qui peut être lourd en mémoire. \\ 
 
-En ce qui concerne rules, l'implémentation du roque est quelque peu lourde, et demande quelques répétitions de code.
+En ce qui concerne rules, l'implémentation du roque est quelque peu lourde, et demande quelques répétitions de code. \\
+
+Les pions promus ne comptent pas comme pions morts mais c'est logique connard.
 \end{document}
